Updated client side response handling

--- a/public/details.html
+++ b/public/details.html
@@ -16,27 +16,31 @@
         <h1>Pantry</h1>
     </div>
 
-    <div class="image-slideshow">
+    <div id="recipe">
 
     </div>
 
-    <div class="ingredients">
+    <div id="image-slideshow">
 
     </div>
 
-    <div class="directions">
+    <div id="ingredients">
 
     </div>
 
-    <div class="tastes">
+    <div id="directions">
 
     </div>
 
-    <div class="nutrition">
+    <div id="tastes">
 
     </div>
 
-    <div class="wine">
+    <div id="nutrition">
+
+    </div>
+
+    <div id="wine">
 
     </div>
 
