--- a/public/details.html
+++ b/public/details.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Pantry</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Pacifico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
@@ -13,40 +15,15 @@
 <body>
 
     <div class="header-title">
-        <h1>Pantry</h1>
+        <a href="./index.html"><img class="logo" src="./images/pantry.png" alt="Pantry Logo"></a>
     </div>
 
-    <div id="recipe">
-
-    </div>
-
-    <div id="image-slideshow">
-
-    </div>
-
-    <div id="ingredients">
-
-    </div>
-
-    <div id="directions">
-
-    </div>
-
-    <div id="tastes">
-
-    </div>
-
-    <div id="nutrition">
-
-    </div>
-
-    <div id="wine">
-
-    </div>
+    <div id="recipe"></div>
 
     <div id="footer"></div>
 
     <script src="details.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 
 </html>
