--- a/details.html
+++ b/details.html
@@ -18,6 +18,10 @@
         <a href="./index.html"><img class="logo" src="./images/pantry.png" alt="Pantry Logo"></a>
     </div>
 
+    <div class="callout callout-info">Here are additional details about your chosen recipe including nutritional facts and the ingredients required.
+        Want to pair the recipe with a wine? Choose an ingredient in the drop-down menu below! 
+    </div>
+
     <div id="recipe"></div>
 
     <div id="footer"></div>
