--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
         <form method="get">
             <fieldset>
                 <legend>Recipe Search</legend>
-                <div class="callout callout-info">To search, fill in all parameters below. To randomize, only select the number of results to display.</div>
+                <div class="callout callout-info">Looking for a recipe? Get access to over thousands of recipes using Pantry. 
+                    To search, fill in all parameters below. To randomize, just select the number of results to display.
+                    Select between 1-10 recipes to return, then click on a recipe for more information on the recipe's nutritional facts, ingredients, and best wine pairings.
+                </div>
                 <label>Enter a search query:
                     <input type="text" name="recipe-query" id="recipe-query">
                 </label>
