Added more descriptions

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="callout callout-info">Looking for a recipe? Get access to over thousands of recipes using Pantry. 
                     To search, fill in all parameters below. To randomize, just select the number of results to display.
                     Select between 1-10 recipes to return, then click on a recipe for more information on the recipe's nutritional facts, ingredients, and best wine pairings.
+                    For example, enter burger in the search bar, select American for the cuisine and choose vegetarian as the diet!
                 </div>
                 <label>Enter a search query:
                     <input type="text" name="recipe-query" id="recipe-query">
